--- a/main/templates/table.html
+++ b/main/templates/table.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<h1>{{ title }} | <a class="btn btn-primary" href="{% url 'main:network' result_id %}">To Network View</a></h1>
+<h1>{{ title }} | <a class="btn btn-primary" href="{% url 'main:network' result_id %}">Network View</a></h1>
 <hr>
 
 <div id="loading">
