--- a/main/templates/datasets.html
+++ b/main/templates/datasets.html
@@ -24,6 +24,8 @@
 					<li><h6>P.2 (EPI_ISL_2157561)</h6></li>
 					<li><h6>EG.5 (EPI_ISL_18221204)</h6></li>
 					<li><h6>XBB.1.16 (EPI_ISL_18221205)</h6></li>
+					<li><h6>BA.2.86 (EPI_ISL_18509902)</h6></li>
+					<li><h6>JN.1 (EPI_ISL_18286580)</h6></li>
 				</ul>
 			</li>
 
