--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -12,12 +12,12 @@
 		</p>
 		<p>
 			The interactions are classified into two different groups based on the method of being predicted: interolog (using BLAST) and domain 
-			(using HMMER). This resulted in 178,713 interactions across 14 strains (including the original, reference). These interactions were also 
+			(using HMMER). This resulted in 171,676 interactions across 16 strains [including the original (reference)]. These interactions were also 
 			characterized with KEGG (pathway enrichment), Gene Ontology (GO enrichment), Subcellular Localization, and Tissue Expression.
 		</p>
 		<p>
 			For any problems, issues or questions that arise from using this webtool, e-mail <a href= "mailto:rkaundal@usu.edu"> bioinfo@kaabil.net</a>.
 		</p>
 	</div>
-	<img src="{% static 'main/architecture.png' %}" width="75%"></img>
+	<img src="{% static 'main/dbArchitecture.png' %}" width="75%"></img>
 {% endblock content %}
