--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -5,15 +5,13 @@
 <h1>{{ title }}</h1>
 	<div class="container home">
 		<p>
-			SARS-CoV-2, a betacoronavirus, and the pathogen that causes COVID-19, has impacted the world in a variety of ways. Vaccines and other treatments 
-			have helped prevent and treat COVID-19. However, as with all viruses, SARS-CoV-2 will mutate, possibly resulting changes in transmissibility 
-			and different pathways the virus can be involved in. Investigating the protein-protein interactions between human proteins and various strains 
-			of SARS-CoV-2 proteins can give insight into common pathways the various strains are involved in.
+			The impact of SARS-CoV-2, a betacoronavirus and the causative agent of COVID-19, has been profound globally. While vaccines and treatments have mitigated the spread and severity of the disease, the virus continues to mutate significantly, potentially altering its transmissibility and pathogenicity. Understanding the protein-protein interactions between SARS-CoV-2 proteins and human proteins can therefore shed light on the shared molecular mechanisms and biological pathways involved across various viral strains.
 		</p>
 		<p>
-			The interactions are classified into two different groups based on the method of being predicted: interolog (using BLAST) and domain 
-			(using HMMER). This resulted in 171,676 interactions across 16 strains [including the original (reference)]. These interactions were also 
-			characterized with KEGG (pathway enrichment), Gene Ontology (GO enrichment), Subcellular Localization, and Tissue Expression.
+			The interactions inside HuCoVarIA are categorized into two groups: interologs, predicted using BLAST, and domains, predicted using HMMER, followed by combined interactions. In total, 171,676 interactions have been identified across <a href="datasets">16 strains</a>, including the original reference strain. These interactions have been further characterized using KEGG for pathway enrichment, Gene Ontology for functional enrichment, subcellular localization analysis, and tissue expression profiling. Users can navigate this database with any of the above features. The comparative interactomes among these strains can be visualized in an enriched manner, and user-customized networks can be displayed, thus providing an enhanced visualization experience.
+		</p>
+		<p>
+			We believe that the comparison of different strains in HuCoVarIA has potential applications in the development of pan-viral vaccine and drug development.
 		</p>
 		<p>
 			For any problems, issues or questions that arise from using this webtool, e-mail <a href= "mailto:rkaundal@usu.edu"> bioinfo@kaabil.net</a>.
