Added machine learning

--- a/main/templates/network.html
+++ b/main/templates/network.html
@@ -20,10 +20,12 @@
 				<li>
 					No. of Gene-Based Interolog Interactions: <b>{{ interolog_genes }}</b>
 					| No. of Gene-Based Domain Interactions: <b>{{ domain_genes }}</b>
+					| No. of Gene-Based Machine Learning-Based Interactions: <b>{{ ml_genes }}</b>
 				</li>
 				<li>
 					No. of Strain-Based Interolog Interactions: <b>{{ interolog_strains }}</b>
 					| No. of Strain-Based Domain Interactions: <b>{{ domain_strains }}</b>
+					| No. of Strain-Based Machine Learning-Based Interactions: <b>{{ ml_strains }}</b>
 				</li>
                 <li>Right click &amp; hold on <b>node names</b> for additional information and links.</li>
                 <li>Hold <b>Ctrl</b> and click on nodes for multi-select</li>
