--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -72,10 +72,6 @@ img {
     right: 5px;
 }
 
-.#000000 {
-    color: white;
-}
-
 .fa-red {
     color: red;
 }
@@ -183,3 +179,30 @@ h1, h2, h3, h4, h5, h6 {
   color: #000;
 }
 
+.range-wrap {
+    position: relative;
+    margin: 0 auto 3rem;
+}
+
+.range {
+    width: 100%;
+}
+
+.bubble {
+    background: #0d6efd;
+    color: white;
+    padding: 0px 6px;
+    position: absolute;
+    border-radius: 4px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .bubble::after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: #0d6efd;
+    top: -1px;
+    left: 50%;
+  }
