--- a/main/templates/table.html
+++ b/main/templates/table.html
@@ -31,10 +31,12 @@
 			<li>
 				No. of Gene-Based Interolog Interactions: <b>{{ interolog_genes }}</b>
 				| No. of Gene-Based Domain Interactions: <b>{{ domain_genes }}</b>
+				| No. of Gene-Based Machine Learning-Based Interactions: <b>{{ ml_genes }}</b>
 			</li>
 			<li>
 				No. of Strain-Based Interolog Interactions: <b>{{ interolog_strains }}</b>
 				| No. of Strain-Based Domain Interactions: <b>{{ domain_strains }}</b>
+				| No. of Strain-Based Machine Learning-Based Interactions: <b>{{ ml_strains }}</b>
 			</li>
 		</ul>
 	</div>
