--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -5,7 +5,7 @@
 <h1>{{ title }}</h1>
 	<div class="container home">
 		<p>
-			The impact of SARS-CoV-2, a betacoronavirus and the causative agent of COVID-19, has been profound globally. While vaccines and treatments have mitigated the spread and severity of the disease, the virus continues to mutate significantly, potentially altering its transmissibility and pathogenicity. Understanding the protein-protein interactions between SARS-CoV-2 proteins and human proteins can therefore shed light on the shared molecular mechanisms and biological pathways involved across various viral strains.
+			The SARS-CoV-2 virus continues to mutate significantly, potentially altering its transmissibility and pathogenicity. Therefore, understanding the protein-protein interactions between viral and human proteins can shed light on the shared molecular mechanisms and biological pathways involved across various viral strains.
 		</p>
 		<p>
 			The interactions inside HuCoVarIA are categorized into two groups: interologs, predicted using BLAST, and domains, predicted using HMMER, followed by combined interactions. In total, 171,676 interactions have been identified across <a href="datasets">16 strains</a>, including the original reference strain. These interactions have been further characterized using KEGG for pathway enrichment, Gene Ontology for functional enrichment, subcellular localization analysis, and tissue expression profiling. Users can navigate this database with any of the above features. The comparative interactomes among these strains can be visualized in an enriched manner, and user-customized networks can be displayed, thus providing an enhanced visualization experience.
